--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -27,14 +27,14 @@ proxies:
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 136","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 141","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @prrofile_purple | 143","type":"vless","server":"rep.tr.xpnvip.ir","port":2689,"udp":false,"uuid":"fa695024-dff5-47c0-8976-64b963236c22","tls":false,"servername":"tgju.org","network":"grpc","grpc-opts":{"grpc-service-name":"nama"},"reality-opts":{"public-key":"L4WAAdlTv7i2tDZwPcvYrCfZg2IDCI_sp5LElu3u91U","short-id":"b6c24852f86067a6","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
-  - {"name":"🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 3","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 4","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🔴 | vless | @ConfigsHUB | 10","type":"vless","server":"159.203.141.231","port":2053,"udp":false,"uuid":"6d5afbb4-450c-4798-91ab-71a792b487bb","tls":false,"servername":"openstreetmap.org","network":"xhttp","reality-opts":{"public-key":"lHqhMsZfvb_xaxQPKOyIDlaSREGM9tFWjVxl4k9aiBg","short-id":"60f78c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 1","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 2","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 3","type":"vless","server":"94.177.145.124","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 4","type":"vless","server":"77.239.109.216","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🔴 | vless | @FreakConfig | 1","type":"vless","server":"159.203.141.231","port":2053,"udp":false,"uuid":"6d5afbb4-450c-4798-91ab-71a792b487bb","tls":false,"servername":"openstreetmap.org","network":"xhttp","reality-opts":{"public-key":"lHqhMsZfvb_xaxQPKOyIDlaSREGM9tFWjVxl4k9aiBg","short-id":"60f78c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 4","type":"vless","server":"5.129.208.19","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇦🇱AL | 🟢 | vless | @FreakConfig | 8","type":"vless","server":"al.spirako.com","port":443,"udp":false,"uuid":"f2a4624b-4efc-4409-bf2f-c7ec5f77503a","tls":false,"servername":"spirako.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"0hH6R90pSxwm7nZPGtJJcJFhwCXU3Rvf-wcEHE7hczo","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 10","type":"vless","server":"77.239.109.216","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -76,14 +76,14 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '❔XX | 🔴 | vless | @prrofile_purple | 143'
-      - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 3'
+      - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 4'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 10'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 1'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 2'
       - '🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12'
+      - '🇺🇸US | 🔴 | vless | @FreakConfig | 1'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 4'
       - '🇦🇱AL | 🟢 | vless | @FreakConfig | 8'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 10'
@@ -125,14 +125,14 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '❔XX | 🔴 | vless | @prrofile_purple | 143'
-      - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 3'
+      - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 4'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 10'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 1'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 2'
       - '🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12'
+      - '🇺🇸US | 🔴 | vless | @FreakConfig | 1'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 4'
       - '🇦🇱AL | 🟢 | vless | @FreakConfig | 8'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 10'
@@ -173,14 +173,14 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '❔XX | 🔴 | vless | @prrofile_purple | 143'
-      - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 3'
+      - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 4'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 10'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 1'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 2'
       - '🇪🇸ES | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 12'
+      - '🇺🇸US | 🔴 | vless | @FreakConfig | 1'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 4'
       - '🇦🇱AL | 🟢 | vless | @FreakConfig | 8'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 10'
