--- a/vmess_tvc_clash.yaml
+++ b/vmess_tvc_clash.yaml
@@ -19,8 +19,7 @@ proxies:
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 15","type":"vmess","server":"183.236.48.163","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 16","type":"vmess","server":"120.232.153.27","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vmess | @prrofile_purple | 146","type":"vmess","server":"france1.okreza151m.ir","port":5156,"cipher":"auto","uuid":"259daf00-ad91-4b63-aef7-6911af21052a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 6","type":"vmess","server":"tr.snapppro.nikastoring.ir","port":1616,"cipher":"auto","uuid":"e86bcd55-d45e-4388-b19c-d61b648462b8","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇰🇷KR | 🟢 | vmess | @ConfigsHUB | 13","type":"vmess","server":"202.79.161.188","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/170733132233","headers":{"host":""}},"client-fingerprint":"chrome"}
+  - {"name":"🇬🇧GB | 🟢 | vmess | @ConfigsHUB | 0","type":"vmess","server":"25.129.198.209","port":8880,"cipher":"auto","uuid":"6f96494c-bdaf-3091-bf7b-29cfe92882b6","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/dabai&amp;Telegram🇨🇳 @WangCai2 /?ed=2560","headers":{"host":"TG.WangCai2.s4.db-link02.top"}},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vmess | @proxystore11 | 6","type":"vmess","server":"65.109.190.91.suupermeat.ir","port":2053,"cipher":"auto","uuid":"b4493eed-d316-45d5-addf-9857ffeba30e","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇹🇼TW | 🟢 | vmess | @yaney_01 | 1","type":"vmess","server":"45.199.138.217","port":41000,"cipher":"auto","uuid":"f9fa3a9c-f7d5-414f-88e6-6970585d9949","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/282018252526","headers":{"host":""}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @yaney_01 | 2","type":"vmess","server":"107.149.119.43","port":37000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/040318142507","headers":{"host":""}},"client-fingerprint":"chrome"}
@@ -31,7 +30,6 @@ proxies:
   - {"name":"🇷🇺RU | 🟢 | vmess | @Hope_Net | 4","type":"vmess","server":"5.182.85.15","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
   - {"name":"🇰🇷KR | 🟢 | vmess | @Hope_Net | 5","type":"vmess","server":"146.56.112.110","port":8888,"cipher":"auto","uuid":"e7c302f3-90d6-42dd-9d7d-94a3683a3707","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇨🇳CN | 🟢 | vmess | @Hope_Net | 6","type":"vmess","server":"110.42.38.185","port":44342,"cipher":"auto","uuid":"f57c973d-9475-4d25-87a3-be0a4482f0b3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 7","type":"vmess","server":"198.2.234.99","port":39771,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @fnet00 | 1","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmessws","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
 proxy-groups:
   - name: MANUAL
@@ -51,8 +49,7 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 6'
-      - '🇰🇷KR | 🟢 | vmess | @ConfigsHUB | 13'
+      - '🇬🇧GB | 🟢 | vmess | @ConfigsHUB | 0'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 6'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
@@ -63,7 +60,6 @@ proxy-groups:
       - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 4'
       - '🇰🇷KR | 🟢 | vmess | @Hope_Net | 5'
       - '🇨🇳CN | 🟢 | vmess | @Hope_Net | 6'
-      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 7'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
   - name: URL-TEST
     type: url-test
@@ -83,8 +79,7 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 6'
-      - '🇰🇷KR | 🟢 | vmess | @ConfigsHUB | 13'
+      - '🇬🇧GB | 🟢 | vmess | @ConfigsHUB | 0'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 6'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
@@ -95,7 +90,6 @@ proxy-groups:
       - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 4'
       - '🇰🇷KR | 🟢 | vmess | @Hope_Net | 5'
       - '🇨🇳CN | 🟢 | vmess | @Hope_Net | 6'
-      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 7'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
   - name: FALLBACK
     type: fallback
@@ -114,8 +108,7 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 6'
-      - '🇰🇷KR | 🟢 | vmess | @ConfigsHUB | 13'
+      - '🇬🇧GB | 🟢 | vmess | @ConfigsHUB | 0'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 6'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
@@ -126,7 +119,6 @@ proxy-groups:
       - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 4'
       - '🇰🇷KR | 🟢 | vmess | @Hope_Net | 5'
       - '🇨🇳CN | 🟢 | vmess | @Hope_Net | 6'
-      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 7'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
 rules:
  - GEOIP,IR,DIRECT
